<resources>
    <string name="app_name">机灵猫</string>
    <string name="long_btn_scan">扫描</string>
    <string name="hand_input">手动添加</string>
    <string name="scan_input">扫码添加</string>
    <string name="add_goods">添加商品</string>
    <string name="modify_goods">修改商品</string>
    <string name="modify_confirm">确认修改</string>
    <string name="input_code">请输入商品条形码</string>
    <string name="real_money">实付金额</string>
    <string name="real_money_hint">若商品无折扣请直接结算</string>
    <string name="cash">现金支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="prev">上一步</string>
    <string name="next">下一步</string>
    <string name="scan">请用收银机扫描顾客支付码</string>
    <string name="select_again">重新选择支付方式</string>
    <string name="finish">完成</string>
    <string name="login">登陆</string>
    <string name="pd">盘点库存</string>
    <string name="save">保存</string>
    <string name="input_pd">请输入实际库存数量</string>

    <!-- Displayed numbers for the digit buttons -->
    <string name="digit0">0</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit1">1</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit2">2</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit3">3</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit4">4</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit5">5</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit6">6</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit7">7</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit8">8</string>
    <!-- Displayed numbers for the digit buttons -->
    <string name="digit9">9</string>

    <!-- Button name on screen to delete the last entered digit or operator -->
    <string name="del">删除</string>
    <!-- Button name on screen to clear the entire calculation field. [CHAR LIMIT=6] -->
    <string name="clear">CLR</string>
    <!-- Do not translate. Unicode division sign; don't translate. Displayed as button on screen. -->
    <string name="div">\u00f7</string>
    <!-- Do not translate. Unicode multiplication sign; don't translate. Displayed as button on screen. -->
    <string name="mul">\u00d7</string>
    <!-- Do not translate. Plus sign, displayed as button on screen -->
    <string name="plus">+</string>
    <!-- Do not translate. Unicode minus sign; don't translate. Displayed as button on screen. -->
    <string name="minus">\u2212</string>
    <!-- Do not translate. Decimal point; don't translate. Displayed as button on screen. -->
    <string name="dot">.</string>
    <!-- Do not translate. Equal sign; don't translate. Displayed as button on screen. -->
    <string name="equal">=</string>

    <string name="leftParenDesc">left parenthesis</string>
    <string name="rightParenDesc">right parenthesis</string>
    <string name="factorialDesc">factorial</string>
    <string name="lnDesc">natural logarithm</string>
    <string name="lgDesc">logarithm</string>
    <string name="sqrtDesc">square root</string>
    <string name="divDesc">divide</string>
    <string name="mulDesc">multiply</string>
    <string name="plusDesc">plus</string>
    <string name="minusDesc">minus</string>
    <string name="dotDesc">point</string>
    <string name="powerDesc">power</string>
    <string name="delDesc">delete</string>
    <string name="clearDesc">clear</string>
    <string name="tanDesc">tangent</string>
    <string name="sinDesc">sine</string>
    <string name="cosDesc">cosine</string>
    <string name="eDesc">Euler\'s number</string>
    <string name="piDesc">pi</string>
    <string name="equalDesc">equals</string>
    <string name="rightParen">)</string>


    <string name="send">发送</string>
    <string name="not_connected">你没有链接一个设备</string>
    <string name="bt_not_enabled_leaving">蓝牙不可用，离开聊天室</string>
    <string name="title_connecting">链接中...</string>
    <string name="title_connected_to">连接到：</string>
    <string name="title_not_connected">无链接</string>
    <string name="scanning">蓝牙设备搜索中...</string>
    <string name="select_device">选择一个好友链接</string>
    <string name="none_paired">没有配对设备</string>
    <string name="none_found">附近没有发现设备</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">其它可连接的设备</string>
    <string name="button_scan">搜索好友</string>
    <string name="connect">我的好友</string>
    <string name="discoverable">设置在线</string>
    <string name="back">退出</string>
    <string name="startVideo">开始聊天</string>
    <string name="stopVideo">结束聊天</string>


    <string name="permission_tip">Tip</string>
    <string name="permission_msg">request permission failed! \n
            you can grant permission in setting interface -> Permissions</string>
    <string name="permission_btn_setting">go to setting</string>
    <string name="permission_btn_quit">quit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    pref 配置 keys-->
    <string name="use_connecting_key">use_connecting</string>
    <string name="enable_scan_only_key">enable_scan_only</string>
    <string name="default_dev">default_dev</string>
    <string name="enable_goods_notice_key">enable_goods_notice</string>
</resources>
