<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/black_white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pd"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_goods_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_20"
        android:text="山西老陈醋"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tv_goods_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@drawable/shape_goods_num"
        android:paddingLeft="@dimen/dp_5"
        android:paddingRight="@dimen/dp_5"
        android:paddingTop="@dimen/dp_3"
        android:paddingBottom="@dimen/dp_3"
        android:text="214354345643"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/et_goods_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_25"
        android:background="@drawable/shape_input_goods_code"
        android:gravity="center"
        android:hint="@string/input_pd"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/color_line_drivier"
        android:textSize="@dimen/sp_18" />

    <Button
        android:id="@+id/btn_add_goods"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginBottom="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_40"
        android:background="@drawable/shape_button_add"
        android:text="@string/save"
        android:textSize="@dimen/sp_18" />

</LinearLayout>