<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_8">

    <include
        android:id="@+id/head"
        layout="@layout/include_head" />

    <LinearLayout
        android:id="@+id/ll_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_36"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="522.00"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_22" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_real_money"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:layout_below="@id/ll_money"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_28"
        android:background="@drawable/shape_input_goods_code"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/real_money"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_22" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/real_money_hint"
            android:textColor="@color/black"
            android:textColorHint="@color/color_line_drivier"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pay_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_real_money"
        android:layout_marginTop="@dimen/dp_28"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_cash"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_64"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_16"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="@string/cash"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_cash"
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/dp_16"
                android:src="@mipmap/ic_launcher_round" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/gray_8" />

        <LinearLayout
            android:id="@+id/ll_wechat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_64"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_16"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="@string/wechat_pay"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_wecaht"
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/dp_16"
                android:src="@mipmap/ic_launcher_round" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/gray_8" />

        <LinearLayout
            android:id="@+id/ll_ali_pay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_64"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_16"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp_15"
                android:text="@string/ali_pay"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/iv_ali"
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/dp_16"
                android:src="@mipmap/ic_launcher_round" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:layout_alignParentBottom="true"
        android:background="@color/black_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_prev"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/prev"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_red"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20" />


    </LinearLayout>


</RelativeLayout>